<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <import
            alias="LogLevelExtensions"
            type="com.upco.report.extension.LogLevelExtensionsKt" />
        <import
            alias="LogChannelExtensions"
            type="com.upco.report.extension.LogChannelExtensionsKt" />
        <variable
            name="viewModel"
            type="com.upco.report.feature.newlog.NewLogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:hint="@string/description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/titleInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:inputType="textMultiLine"
                        app:onTextChanged="@{ viewModel.setInputDescription }"  />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:hint="@string/title"
                    app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout"
                    app:layout_constraintBottom_toTopOf="@id/detailsInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        app:onTextChanged="@{ viewModel.setInputTitle }"  />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/detailsInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:hint="@string/details"
                    app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
                    app:layout_constraintBottom_toTopOf="@id/sourceInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/detailsInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="100"
                        android:inputType="textMultiLine"
                        app:onTextChanged="@{ viewModel.setInputDetails }"  />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sourceInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:hint="@string/source"
                    app:layout_constraintTop_toBottomOf="@id/detailsInputLayout"
                    app:layout_constraintBottom_toTopOf="@id/eventCountInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sourceInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        app:onTextChanged="@{ viewModel.setInputSource }"  />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eventCountInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:hint="@string/events"
                    app:layout_constraintTop_toBottomOf="@id/sourceInputLayout"
                    app:layout_constraintBottom_toTopOf="@id/levelInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventCountInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        app:onTextChanged="@{ viewModel.setInputEventCount }"  />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/levelInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:hint="@string/level"
                    app:layout_constraintTop_toBottomOf="@id/eventCountInputLayout"
                    app:layout_constraintBottom_toTopOf="@id/channelInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/levelInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:editable="false"
                        app:onLevelSelected="@{ viewModel.setInputLevel }" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/channelInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:hint="@string/channel"
                    app:layout_constraintTop_toBottomOf="@id/levelInputLayout"
                    app:layout_constraintBottom_toTopOf="@id/saveButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/channelInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:editable="false"
                        app:onChannelSelected="@{ viewModel.setInputChannel }" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/contained_button_height"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:text="@string/save"
                    android:onClick="@{ () -> viewModel.save() }"
                    app:layout_constraintTop_toBottomOf="@id/channelInputLayout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:alpha="0.8"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="?android:attr/progressBarStyle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>